--- a/2016/0519 QCD at Cosmic Energies/jan_kaspar_totem_results.tex
+++ b/2016/0519 QCD at Cosmic Energies/jan_kaspar_totem_results.tex
@@ -621,19 +621,70 @@ $$ \si_{\rm CD}
 }\hskip1mm\fig[8.5cm]{fig/cd_ty_dist_7TeV.png}\hss}
 
 \newpage %-------------------------------------------------------------------------------------------
-\title{Forward particle multiplicities, TOTEM and TOTEM + CMS}
+\title{Forward charged-particle multiplicities}
+
+\> $\d N_{\rm ch} / \d\et$ : mean number of charged particles per event and per unit of pseudorapidity
+
+\> probes (non-)perturbative strong interactions and hadronisation 
+
+\> primary particles only: primary = lifetime $> 30\un{ps}$ (definition consistent with other LHC experiments)
+
+\> measurement based on 2
+\>> $\approx 95\un{\%}$ of inelastic events seen
+\>> almost all non-diffractive events visible
+\>> almost all diffraction with $m_X \gs 3.4\un{GeV}$ detected
+
+\centerline{\fig[5cm]{fig/dNdeta_zimpact.png}}
 
 
 \newpage %-------------------------------------------------------------------------------------------
-\title{}
+\ctitle{Forward charged-particle multiplicities}{$\sqrt s = 7\un{TeV}$}
+
+% TODO: why the Monte-Carlo curves non-continuous ?
+
+\centerline{
+	\fig[,5cm]{fig/dNdeta_totem_7TeV.png}%
+	\hskip3mm
+	\fig[,5cm]{fig/dNdeta_7TeV_allLHC.png}%
+}
+
+\> main contributions to systematic uncertainty ($\approx 10\un{\%}$)
+\>> subtraction of a large fraction of secondaries (about $80\un{\%}$ of all T2 tracks)
+\>> track efficiency and misalignment uncertainties
+
+% no MC describes data well
+
+%\> gap LHCb -- TOTEM T2 will be filled
+%\>> analysis of T1 data in progress
+%\>> data with shifted IP by $11\un{m}$ $\Rightarrow$ shift of T2 acceptance: $6.0 < \et < 7.3$ or  $3.8 < \et < 4.8
 
 
 \newpage %-------------------------------------------------------------------------------------------
-\title{}
+\ctitle{Forward charged-particle multiplicities}{$\sqrt s = 8\un{TeV}$}
+
+\> TOTEM + CMS
+\>> \Em{non-single-diffractive enhanced}: requiring both hemispheres of T2 on
+\>> \Em{single-diffractive enhanced}: requiring only one hemisphere of T2 on
+
+\centerline{
+	\fig[,3.5cm]{fig/dNdeta_8TeV_with_CMS.png}%
+	\hskip3mm
+	\fig[,3.5cm]{fig/dNdeta_8TeV_with_CMS_SD_enhanced.png}%
+}
+
+\> TOTEM only, with displaced vertex ($z = 11.25\un{m}$)
+
+\centerline{
+	\fig[,3.5cm]{fig/dNdeta_8TeV_displaced_vertex.png}%
+}
 
 
 \newpage %-------------------------------------------------------------------------------------------
 \title{Central diffraction with CMS}
+
+\> low mass resonances
+\>> 8 TeV, 90m, Jul 2012
+\>> 13 TeV, 90m, Oct 2015
 
 
 \newpage %-------------------------------------------------------------------------------------------
@@ -647,6 +698,11 @@ $$ \si_{\rm CD}
 \newpage %-------------------------------------------------------------------------------------------
 \title{Inelastic event classification}
 
+\> analysis in review: 8 TeV, 90m, 2012
+
+\> 13 TeV data also available
+
+TODO: main weakness ??
 
 \newpage %-------------------------------------------------------------------------------------------
 \title{}
